hphp/hack/test/typecheck/misspell_dict.php
<?hh // strict

function foo(): void {
  $x = Dict['foo' => 'bar'];
}
